# Genie

./: .gitignore  pyproject.toml  temp_requirements.txt
alembic/: env.py
alembic/versions/: 247cf1191314_added_family_group_relation_on_user_.py  56688b7dba6f_added_family_group_relation_on_user_.py  69abd1a75b83_added_family_group_model.py  79a9234549a7_added_otp_tracking.py  add8743e7f91_initial_generation.py  c6ce9fec3a50_initial_schema.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/auth/: constants.py  deps.py  enums.py  model.py  otp_routes.py  routes.py  schema.py  service.py
app/core/: config.py  constants.py
app/db/: session.py
app/exceptions/: mappers.py
app/groups/: constants.py  enums.py  model.py  repository.py  routes.py  schema.py  service.py
app/users/: constants.py  enums.py  model.py  repository.py  routes.py  schema.py  service.py
app/utils/: otp.py  security.py  validators.py
